--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <script type="module" src="./src/main.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <main id="app">
+      <section class="container">
+        <div class="row justify-content-center my-5">
+          <div class="col-3 viewPokemon"></div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="btn btn-success">Pokemon</button>
+        </div>
+      </section>
+    </main>
     
   </body>
 </html>
